[package]
authors = ["Andy Lok <andylokandy@hotmail.com>"]
edition = "2018"
name = "tikv-client"
version = "0.0.2"

[dependencies]
futures = "0.3"
pyo3 = { version = "0.14.4", features = ["abi3-py36", "extension-module"] }
pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }
tikv-client = { git = "https://github.com/tikv/client-rust.git", branch = "master" }
tokio = { version = "1", features = ["sync"] }

# This is a workaround for building the client in manylinux container. These dependencies
# are not directly used by this crate but the cargo will add the following features to the
# indirected dependencies in order to vender the OpenSSL.
reqwest = { version = "0.11", default-features = false, features = ["native-tls-vendored"] }
# grpcio = { version = "0.9", features = ["openssl-vendored"], default-features = false }

[lib]
crate-type = ["cdylib"]
name = "tikv_client"
