[package]
authors = ["Andy Lok <andylokandy@hotmail.com>"]
edition = "2018"
name = "tikv-client"
version = "0.0.3"

[dependencies]
async-std = "1.12"
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime", "attributes"] }
tikv-client = "0.2"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }

[lib]
crate-type = ["cdylib"]
name = "tikv_client"
