[project]
name = "tikv_client"
description = "TiKV Client for Python"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["TiKV"]
authors = [
  { name = "Andy Lok", email = "andylokandy@hotmail.com" }
]
maintainers = [
  {name = "Andy Lok", email = "andylokandy@hotmail.com"}
]

[build-system]
requires = ["maturin"]
build-backend = "maturin"
